Partial fix of issue #77
The scrollbar don't seems to be moving along. This shall be reviewed.

--- a/css/popup.css
+++ b/css/popup.css
@@ -417,7 +417,9 @@ body.big .list .manga .mgtitle {
   background-color: #DDDDDD;
   color: #555555;
 }
-
+.manga {
+  position: relative;
+}
 .block .manga .mgtitle {
   display:block;
   background-color: #CCCCFF;
